# sImageAnnotator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  sImageAnnotator.cpp
